Group Icons: Second Stage

--- a/groupicons/adm/style/event/acp_group_options_after.html
+++ b/groupicons/adm/style/event/acp_group_options_after.html
@@ -1,11 +1,11 @@
 <script>
 	function update_image(newimage)
 	{
-		document.getElementById('image').src = (newimage) ? "{ICONS_PATH}/" + encodeURI(newimage) : "./images/spacer.gif";
+		document.getElementById('image').src = (newimage) ? "{{ ICONS_PATH }}" + encodeURI(newimage) : "./images/spacer.gif";
 	}
 </script>
 
 <dl>
 	<dt><label for="group_icon">{{ lang('GROUP_ICON') }}{{ lang('COLON') }}</label></dt>
-	<dd><select name="group_icon" id="group_icon" onchange="update_image(this.options[selectedIndex].value);">{{ ICON_OPTIONS }}</select> <img src="{RANK_IMAGE}" id="image" alt=""></dd>
+	<dd><select name="group_icon" id="group_icon" onchange="update_image(this.options[selectedIndex].value);">{{ ICON_OPTIONS }}</select> <img src="{{ CURRENT_ICON_SRC }}" id="image" alt=""></dd>
 </dl>
